Fix inline dropdown with whitespace in between

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1806,6 +1806,9 @@ table th[data-sortt-desc] {
   margin-bottom: -1px !important;
   margin-right: -.5rem !important;
 }
+.ui.inline.dropdown > .dropdown.icon {
+  margin: -3px 0 !important;
+}
 .tiny.button > .dropdown.icon {
   margin-top: -2px !important;
   margin-bottom: -2px !important;
